# lammies

./: .gitignore  .pre-commit-config.yaml  download.py  lammies.html  make_lammies.py  output_spread.html  pyproject.toml  requirements.txt  zip.sh
data/: bigsheet.csv  marks.csv
templates/: doc.html  one_lammy.html  one_lammy_back.html  one_lammy_front.html  page.html  scratch.html  spreads.html
