[tool.poetry]
name = "lammies"
version = "0.1.0"
description = "Turn a spreadsheet into printable HTML lammies"
authors = ["Dragon Dave McKee"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
funcy = "^2.0"
jinja2 = "^3.1.4"
requests = "^2.32.3"
requests-cache = "^1.2.1"
pre-commit = "^3.8.0"
weasyprint = "^62.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
